<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>44</version>
  </parent>
  
  <groupId>com.linty.sonar</groupId>
  <artifactId>sonar-vhdlrc-plugin</artifactId>
  <version>1.8.044</version>
  <packaging>sonar-plugin</packaging>
  <name>SonarQube VHDL Rulechecker Plugin</name>
   <organization>
    <name>na</name>
  </organization>
  <url>http://maven.apache.org</url>
  
   <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.version>7.9.1</sonar.version>
    <license.skip>true</license.skip>
    <jacoco.version>0.8.1</jacoco.version>
  </properties>

 <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.5.2</version>
      <scope>test</scope>
   </dependency>
   <dependency>
      <groupId>org.sonarsource.sonarqube</groupId>
      <artifactId>sonar-plugin-api</artifactId>
      <!-- minimal version of SonarQube to support. Note that the groupId was "org.codehaus.sonar" before version 5.2 -->
      <version>${sonar.version}</version>
      <!-- mandatory scope -->
      <scope>provided</scope>
    </dependency>
     <dependency>
        <groupId>org.easytesting</groupId>
        <artifactId>fest-assert</artifactId>
        <version>1.4</version>
      </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>22.0</version>
    </dependency>
    <dependency>
    	<groupId>commons-io</groupId>
    	<artifactId>commons-io</artifactId>
    	<version>2.5</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-text</artifactId>
	    <version>1.7</version>
	</dependency>    
    <dependency><!--  -->
    	<groupId>commons-lang</groupId>
    	<artifactId>commons-lang</artifactId>
    	<version>2.6</version>
    </dependency>	
	<!-- https://mvnrepository.com/artifact/org.codehaus.staxmate/staxmate -->
<!-- 	<dependency> -->
<!-- 	    <groupId>org.codehaus.staxmate</groupId> -->
<!-- 	    <artifactId>staxmate</artifactId> -->
<!-- 	    <version>2.0.1</version> -->
<!-- 	</dependency>  -->
<!-- https://mvnrepository.com/artifact/com.fasterxml.staxmate/staxmate -->
	<dependency>
	    <groupId>com.fasterxml.staxmate</groupId>
	    <artifactId>staxmate</artifactId>
	    <version>2.3.1</version>
	</dependency>

	<dependency>
	    <groupId>org.xmlunit</groupId>
	    <artifactId>xmlunit-core</artifactId>
	    <version>2.2.1</version>
	</dependency>	
	<dependency>
    <groupId>org.xmlunit</groupId>
	    <artifactId>xmlunit-matchers</artifactId>
	    <version>2.2.1</version>
	</dependency>
 </dependencies>
  

   <build>
    <plugins>
      <plugin>     
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>post-unit-test</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
        <artifactId>sonar-packaging-maven-plugin</artifactId>
        <extensions>true</extensions>
        <configuration>
          <pluginName>VHDL</pluginName>
          <pluginClass>com.linty.sonar.plugins.vhdlrc.VHDLRcPlugin</pluginClass>
          <sonarQubeMinVersion>${sonar.version}</sonarQubeMinVersion>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
   </build>
  
</project>
